--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
-/* Стилі сайту, крім слайдеру*/
+/* Стилі сайту, крім слайдеру */
 
-/* Пвдключення шрифтів з google fonts*/
+/* Підключення шрифтів з google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Marck+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
@@ -17,7 +17,7 @@ main {
   display: flex;
   flex-flow: column nowrap;
   min-height: 100vh;
-  background-color: #f0f0f0;
+  background-color: darkgrey;
 }
 
 .main-container {
@@ -26,8 +26,7 @@ main {
   margin: auto;
 }
 
-/* Стилі шапки сайту*/
-
+/* Стилі шапки сайту */
 header {
   background-color: #cccccc;
   color: black;
@@ -66,15 +65,14 @@ header {
 }
 
 .menu a:hover {
-  color: rgb(109, 109, 109);
+  color: #808080;
 }
 
 .menu a:active {
   color: #2c2e53;
 }
 
-/* Стилі підвалу сайту*/
-
+/* Стилі підвалу сайту */
 footer {
   background-color: #cccccc;
   text-align: center;
@@ -85,7 +83,7 @@ footer {
   flex: 0 0 auto;
 }
 
-/* Стилі секцій сайту сайту*/
+/* Стилі секцій сайту сайту */
 section {
   color: black;
   font-size: 20px;
@@ -118,7 +116,7 @@ section {
 
 .crew {
   text-align: justify;
-  min-width: 200 px;
+  min-width: 200px;
   max-width: 1100px;
 }
 
@@ -162,7 +160,7 @@ a:visited {
   color: #000;
 }
 
-/* Стилі для меню на сторінках "Екіпаж"*/
+/* Стилі для меню на сторінках "Екіпаж" */
 aside {
   overflow: hidden;
   float: right;
@@ -187,16 +185,14 @@ aside {
 }
 
 .crewNav a:hover {
-  color: rgb(109, 109, 109);
+  color: #808080;
 }
 
 .crewNav a:active {
-  color: #2c2e53;;
+  color: #2c2e53;
 }
 
-
-
-/* Стилі кнопки вгору сторінки*/
+/* Стилі кнопки вгору сторінки */
 .btn-up {
   position: fixed;
   background-color: black;
@@ -223,18 +219,17 @@ aside {
   display: none;
 }
 
+/* Колір заднього фона при наведенні */
 @media (hover: hover) and (pointer: fine) {
   .btn-up:hover {
-    background-color: #cccccc;
-    /* цвет заднего фона при наведении */
+    background-color: #808080;
   }
 }
 
-/* Стилі Пошуку*/
-#searh {
+/* Стилі Пошуку */
+#search {
   display: inline;
   padding: 4px;
-
 }
 
 #input-workers {
@@ -242,8 +237,7 @@ aside {
   padding: 8px;
 }
 
-/* Стилі кнопок*/
-
+/* Стилі кнопок */
 button {
   color: white;
   background-color: #7a7a7a;
@@ -279,7 +273,7 @@ button:active {
   background-color: #7a7a7a;
 }
 
-/* Стилі форми*/
+/* Стилі форми */
 input[type=text],
 select,
 textarea {
@@ -292,7 +286,6 @@ textarea {
   margin-bottom: 16px;
   resize: vertical
 }
-
 
 input[type=submit] {
   background-color: black;
@@ -315,8 +308,7 @@ input[type=submit]:hover {
   margin: auto;
 }
 
-
-/* Стилі модального вікна*/
+/* Стилі модального вікна */
 .modal {
   position: fixed;
   top: 0;
@@ -370,4 +362,3 @@ input[type=submit]:hover {
   background-color: transparent;
   cursor: pointer
 }
-
